--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack",
-    "prebuild":"rm -rf dist",
+    "prebuild": "rm -rf dist",
     "deploy": "npm run prebuild && npm run build && gh-pages -d dist"
   },
   "devDependencies": {
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@cosmjs/amino": "^0.28.0",
     "@cosmjs/crypto": "^0.27.1",
     "@cosmjs/encoding": "^0.27.1",
     "@cosmjs/launchpad": "^0.27.1",
